# muni-portal-backend

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Pipfile  Procfile  README.md  app.json  demodata.json  docker-compose.yml  heroku.yml  manage.py  package.json  pyproject.toml
.github/workflows/: test.yml
muni_portal/: settings.py  test.py  urls.py  wsgi.py
muni_portal/collaborator_api/: client.py  types.py
muni_portal/core/: admin.py  apps.py  auth.py  django_q_hooks.py  django_q_tasks.py  model_serializers.py  models.py  serializers.py  signals.py  views.py  wagtail_serializers.py
muni_portal/core/fixtures/: seeddata.json
muni_portal/core/migrations/: 0001_initial.py  0002_servicepage_icon_classes.py  0003_auto_20201010_1712.py  0004_auto_20201010_1713.py  0005_auto_20201010_1719.py  0006_auto_20201016_1454.py  0007_administrationindexpage_administratorpage_councillorgrouppage_councillorlistpage_councillorpage_mymu.py  0008_remove_personpage_name.py  0009_administrationindexpage_overview.py  0010_auto_20201022_1037.py  0011_auto_20201022_1140.py  0012_personpage_profile_image.py  0013_servicepage_head_of_service.py  0014_auto_20201022_1858.py  0015_councillorgrouppage_members_label.py  0016_auto_20201023_0647.py  0017_auto_20201102_2204.py  0017_councillorgrouppage_icon_classes.py  0018_merge_20201103_1733.py  0019_webhook.py  (+31 more)
muni_portal/notifications/: apps.py  tests.py  urls.py  views.py
muni_portal/settings/: base.py  test.py
muni_portal/templates/: base.html  index.html
muni_portal/tests/: __init__.py  test_api.py  test_pages.py
(+29 files in other folders)
